[package]
name = "riscv-instruction-parser"
authors = ["Pawel Dzialo, Erik Serrander"]
description = "A crate for parsing RISC-V instructions. Useful for decompilation and emulation etc."
repository = "https://github.com/onsdagens/armv6-m-instruction-parser"
license = "MIT"
version = "0.2.0"
edition = "2021"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
bitutils = "3.0.1"
